fix(product): fix recommendation service